# DeNovoWEST

./: .gitignore  LICENSE  README.md  denovowest_conda.yml  pyproject.toml
DeNovoWEST/: DNE_test.py  README.md  combine_IHWcorrect.R  combine_dne_dnn.R  probabilities.py  submit_DNE_test.py  submit_DNE_test_pergene.py  weights.py
denovowest/: cli.py
examples/: DNM_hg38_MANE_min.tsv
input/: DDG2P_21_9_2018.csv  DDG2P_22_9_2019.csv  PTV_modelresults_2019-06-26.tab  PTV_modelresults_2020-02-14.tab  PTV_modelresults_2020-03-19.tab  README.md  USabnormality_likelihood.csv  denovonear_out_31064_ntrios_2018_09_14.txt  denovonear_out_missense_31058_ntrios_2019_05_15.txt  dne_test_2019_05_16.tab  dne_test_2020_01_21_all.tab  dne_test_2020_01_21_mis.tab  downsampling_numbers.tab  fordist_joint_dnm_ID_sex_2019_08_22.txt  fordist_joint_dnm_ID_sex_2019_08_30.txt  gene_features.tab  info_for_IHW.tab  merged_all_dne_test_ppv_2020_03_09.tab  merged_mis_dne_test_ppv_2020_03_09.tab
misc/: README.md  combine_dne_dnn.py  compare_gene_template.html  compare_run.py  gff2gff
nextflow/: .gitignore  denovowest.nf  nextflow.config  nextflow.config.annotate  nextflow.config.b37  nextflow.config.clustering  nextflow.config.enrichment  nextflow.config.full  nextflow.config.noweights  nextflow.config.simulation  nextflow.config.test  nextflow.config.weights  nf-test.config  run_tests.sh
paperfigures/: Figure1.Rmd  Figure2.Rmd  Figure3.Rmd  Figure4.Rmd  README.md
resources/: MANE.GRCh38.v1.0.ensembl_genomic_mapping.tsv  README.md  genes_full_constraint_b38_27022023.tsv  genes_regional_data_b38_13022023.tsv  new_shet  rates_model_dnn.tsv
weight_creation/: README.md  (+1 more)
(+93 files in other folders)
